# UnB_2024-1_LP_Projeto

home_automation/: .env  Cargo.toml  diesel.toml
home_automation/migrations/2022XXXXXX_create_devices/: up.sql
home_automation/migrations/2024-06-21-022809_create_devices/: down.sql  up.sql
home_automation/migrations/2024-06-21-022809_create_users/: up.sql
home_automation/migrations/2024-06-30-193345_users/: up.sql
home_automation/migrations/2024-06-30-193750_devices/: up.sql
home_automation/src/: controllers.rs  database.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs  schemas.rs
