[package]
name = "home_automation"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
